styles.css
.test {
    border: 1px solid black;
}

body {
    border: 4px solid red;
    background-image: url("images/Fade.jpg");
}

.logo {
    margin-top: 3%;
    width: 100%;
    height: auto;
}

.rowGap {
    margin-top: 3%;
}

.orderingFoodText {
    /*position: relative;*/
    /*top: 350%;*/
    /*left: 3%;*/
    /*text-align: center;*/
    /*margin: 0;*/
    /*padding: 0;*/

    font-family: Poppins;
    font-style: normal;
    font-weight: 300;
    font-size: 50px;
    line-height: 65px;
    /* or 133% */

    color: #212529;
}

.comingSoonText {
    font-family: Poppins;
    font-style: normal;
    font-weight: 600;
    font-size: 24px;
    line-height: 32px;
    /* or 133% */

    /*position: relative;*/
    /*top: 350%;*/
    /*left: 3%;*/

    /* Primary Blue/Primary Blue */

    color: #3859B1;
}

.personImg {
    width: 100%;
}

/* bootstrap xl */
@media (max-width: 1200px) {
    .dynamic-coming-soon-font-size {
        font-size: 20px;
    }
}

/* bootstrap lg */
@media (max-width: 992px) {
    .dynamic-ordering-food-font-size {
        font-size: 42px;
    }
    .dynamic-coming-soon-font-size {
        font-size: 21px;
    }
}

/* bootstrap md */
@media (max-width: 768px) {
    /*Align text to center.*/
    .text-xs-center {
        text-align: center;
    }
}

/* bootstrap sm */
@media (max-width: 576px) {
    .dynamic-ordering-food-font-size {
        font-size: 40px;
    }
    .dynamic-coming-soon-font-size {
        font-size: 21px;
    }
}

.leftSide {
    padding-top: 20%;
}

.rightSide {
    padding-top: 14%;
}

